used GenericRecord from apache avro, added docker compose yml for kafka and schema registry

--- a/kafka-producer/src/main/resources/application.properties
+++ b/kafka-producer/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=kafka-producer
-server.port=8888
+server.port=8090
 product.created.event.topic=product-created-events-topic
-spring.kafka.producer.bootstrap-server=localhost:9092
+spring.kafka.producer.bootstrap-servers=localhost:19092,localhost:19094,localhost:19096
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.ack=all
 spring.kafka.admin.properties.min-in-sync-replicas=3
 spring.kafka.producer.retries=10
@@ -11,3 +11,5 @@ spring.kafka.producer.properties.retry.backoff.ms=1000
 spring.kafka.producer.properties.request.timeout.ms=5000
 spring.kafka.producer.properties.delivery.timeout.ms=12000
 spring.kafka.producer.properties.enable.idempotence=true
+spring.kafka.producer.properties.schema.registry.url=http://localhost:7055
+
