--- a/kafka-consumer/src/main/resources/application.properties
+++ b/kafka-consumer/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=kafka-consumer
 server.port=8889
 product.created.event.topic=product-created-events-topic
-spring.kafka.consumer.bootstrap-server=localhost:9092
+spring.kafka.consumer.bootstrap-servers=localhost:19092,localhost:19094,localhost:19096
+spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.group-id=product-created-events
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.schema.registry.url=http://localhost:7055
