--- a/kafka-consumer/src/main/resources/application.properties
+++ b/kafka-consumer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=kafka-consumer
-server.port=8889
+server.port=0
 product.created.event.topic=product-created-events-topic
 spring.kafka.consumer.bootstrap-servers=localhost:19092,localhost:19094,localhost:19096
 spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -7,3 +7,4 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.group-id=product-created-events
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.schema.registry.url=http://localhost:7055
+spring.kafka.consumer.properties.specific.avro.reader=true
